--- a/sections/nitrate_sensors_integration.html
+++ b/sections/nitrate_sensors_integration.html
@@ -471,9 +471,9 @@ Typically they are valid for recently manufactured and calibrated instruments.
 Bio-fouling and other influences are not included.</p>
 <p>|  |  Sample rate  |  Power |  Manufacturer Accuracy | Manufacturer Precision |  Manufacturer Detection limit |  Precision estimate |  Accuracy estimate (w. x-calibr.) |
 |  | Hz | W | µM NO3 | µM NO3 | µM NO3 | µM NO3 | µM NO3 |
-| Deep SUNA  |   |   |   |   |   |   |   |
-| OPUS  |   |   |   |   |   |  |   |
-| LoC  |   |   |   |   |   |   |   |</p>
+| Deep SUNA  | 1 |   |   |   |   |   |   |
+| OPUS  | 1/3 |   |   |   |   |  |   |
+| LoC  | 0.0002 (7 min) |   |   |   |   |   |   |</p>
 </div>
 </div>
 <div class="section" id="sensor-integration-with-gliders">
