--- a/sections/nitrate_sensors_integration.html
+++ b/sections/nitrate_sensors_integration.html
@@ -469,12 +469,57 @@ The precision and detection limit also significantly depend on the availability 
 Please note that it is not known how exactly the manufacturer’s values are determined and whether the same terminology is used.
 Typically they are valid for recently manufactured and calibrated instruments.
 Bio-fouling and other influences are not included.</p>
-<p>|   |  Sample rate  |  Power |  Manufacturer Accuracy | Manufacturer Precision |  Manufacturer Detection limit |  Precision estimate |  Accuracy estimate (w. x-cali.) |
-|   |   |   |   |   |   |   |   |
-|   | Hz | W | µM NO3 | µM NO3 | µM NO3 | µM NO3 | µM NO3 |
-| Deep SUNA  | 1 |   |   |   |   |   |   |
-| OPUS  | 1/3 |   |   |   |   |  |   |
-| LoC  | 0.0002 (7 min) |   |   |   |   |   |   |</p>
+<table class="colwidths-auto table">
+<thead>
+<tr class="row-odd"><th class="head"><p></p></th>
+<th class="head"><p>Sample rate</p></th>
+<th class="head"><p>Power</p></th>
+<th class="head"><p>Manufacturer Accuracy</p></th>
+<th class="head"><p>Manufacturer Precision</p></th>
+<th class="head"><p>Manufacturer Detection limit</p></th>
+<th class="head"><p>Precision estimate</p></th>
+<th class="head"><p>Accuracy estimate (w. x-cali.)</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="row-even"><td><p></p></td>
+<td><p>Hz</p></td>
+<td><p>W</p></td>
+<td><p>µM NO3</p></td>
+<td><p>µM NO3</p></td>
+<td><p>µM NO3</p></td>
+<td><p>µM NO3</p></td>
+<td><p>µM NO3</p></td>
+</tr>
+<tr class="row-odd"><td><p>Deep SUNA</p></td>
+<td><p>1</p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+</tr>
+<tr class="row-even"><td><p>OPUS</p></td>
+<td><p>1/3</p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+</tr>
+<tr class="row-odd"><td><p>LoC</p></td>
+<td><p>0.0002 (7 min)</p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+<td><p></p></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div class="section" id="sensor-integration-with-gliders">
