deploy: eedba456553a7afd91d4f49aaf015f601a51696c

--- a/sections/nitrate_sensors_integration.html
+++ b/sections/nitrate_sensors_integration.html
@@ -494,7 +494,7 @@ Bio-fouling and other influences are not included.</p>
 <tr class="row-odd"><td><p>Deep SUNA</p></td>
 <td><p>1</p></td>
 <td><p>&lt;=8</p></td>
-<td><p></p></td>
+<td><p>10% or &gt;=2.0 (+0.3 / hr lamp)</p></td>
 <td><p></p></td>
 <td><p></p></td>
 <td><p></p></td>
@@ -503,7 +503,7 @@ Bio-fouling and other influences are not included.</p>
 <tr class="row-even"><td><p>OPUS</p></td>
 <td><p>1/3</p></td>
 <td><p>&lt;=8</p></td>
-<td><p></p></td>
+<td><p>5% +0.7</p></td>
 <td><p></p></td>
 <td><p></p></td>
 <td><p></p></td>
@@ -512,14 +512,17 @@ Bio-fouling and other influences are not included.</p>
 <tr class="row-odd"><td><p>LoC</p></td>
 <td><p>0.0002 (7 min)</p></td>
 <td><p>1.5</p></td>
-<td><p></p></td>
-<td><p></p></td>
+<td><p>3 % for concentration range 5.63 to 44.43 (1) (Birchill et al., 2019)</p></td>
+<td><p>4 % for concentration range 5.63 to 44.43 (1) (Birchill et al., 2019)</p></td>
 <td><p></p></td>
 <td><p></p></td>
 <td><p></p></td>
 </tr>
 </tbody>
 </table>
+<p>(1) from estimates of combined uncertainty estimated via the analysis of certified reference materials using 7 analysers (Birchill et al., 2019).
+(2)
+(3)</p>
 </div>
 </div>
 <div class="section" id="sensor-integration-with-gliders">
