--- a/sections/nitrate_sensors_integration.html
+++ b/sections/nitrate_sensors_integration.html
@@ -520,11 +520,11 @@ Bio-fouling and other influences are not included.</p>
 </tr>
 </tbody>
 </table>
-<p>(1) from estimates of combined uncertainty estimated via the analysis of certified reference materials using 7 analysers (Birchill et al., 2019).
-(2) not a standard mode of operation for the LoC analyser, values are from a CTD trial deployment (Vincent et al., 2017).
-(3) It is unclear whether the OPUS’ accuracy and precision values given by the manufacturer use internal averaging of several spectra. The typical noise on CTDs was determined using single non-averaged spectra.
-(4) The ‘noise’ values have been estimated by calculating the standard deviation of instrument nitrate concentrations at depths with apparently homogeneous nitrate concentrations.
-(5) Deep SUNA and OPUS instruments have been used attached to a CTD and high accuracy nitrate concentrations have been compared to Deep SUNA and OPUS values at the time of bottle closing. The given values are the rms difference between the bottle and instrument values after the instrument values have been linearly corrected to match the bottle values</p>
+<p>(1) from estimates of combined uncertainty estimated via the analysis of certified reference materials using 7 analysers (Birchill et al., 2019).</p>
+<p>(2) not a standard mode of operation for the LoC analyser, values are from a CTD trial deployment (Vincent et al., 2017).</p>
+<p>(3) It is unclear whether the OPUS’ accuracy and precision values given by the manufacturer use internal averaging of several spectra. The typical noise on CTDs was determined using single non-averaged spectra.</p>
+<p>(4) The ‘noise’ values have been estimated by calculating the standard deviation of instrument nitrate concentrations at depths with apparently homogeneous nitrate concentrations.</p>
+<p>(5) Deep SUNA and OPUS instruments have been used attached to a CTD and high accuracy nitrate concentrations have been compared to Deep SUNA and OPUS values at the time of bottle closing. The given values are the rms difference between the bottle and instrument values after the instrument values have been linearly corrected to match the bottle values</p>
 </div>
 </div>
 <div class="section" id="sensor-integration-with-gliders">
