--- a/sections/nitrate_sensors_integration.html
+++ b/sections/nitrate_sensors_integration.html
@@ -495,19 +495,19 @@ Bio-fouling and other influences are not included.</p>
 <td><p>1</p></td>
 <td><p>&lt;=8</p></td>
 <td><p>10% or &gt;=2.0 (+0.3 / hr lamp)</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
+<td><p>0.3 (2.4 SW sal)</p></td>
+<td><p>0.5 (2.0 SW sal)</p></td>
+<td><p>0.17 (4)</p></td>
+<td><p>0.5-1.0 (5)</p></td>
 </tr>
 <tr class="row-even"><td><p>OPUS</p></td>
 <td><p>1/3</p></td>
 <td><p>&lt;=8</p></td>
 <td><p>5% +0.7</p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
-<td><p></p></td>
+<td><p>0.36 (3)</p></td>
+<td><p>2.1</p></td>
+<td><p>1.3 (4)</p></td>
+<td><p>1.0 (5)</p></td>
 </tr>
 <tr class="row-odd"><td><p>LoC</p></td>
 <td><p>0.0002 (7 min)</p></td>
