deploy: 6169fc3693ebc4fadc519446bf5f4696beedf604

--- a/sections/nitrate_sensors_integration.html
+++ b/sections/nitrate_sensors_integration.html
@@ -465,8 +465,8 @@ Drift because of lamp aging is significant for Deuterium UV lamps and degrades t
 The precision and detection limit also significantly depend on the availability of temperature and salinity information (see sections on processing).</p>
 <p>Note: To get optimal nitrate concentrations frequent cross-calibration against higher quality measurements from water samples is recommended.</p>
 <p>Cross-calibration can significantly reduce the overall uncertainty of the nitrate concentrations. Different cross-calibration approaches are possible. The best results will be obtained by attaching the instrument to the CTD and run calibration casts with high quality water sample measurements before and after the deployment. A similar quality should be possible with in-lab calibrations using known reference material before and after the deployment. If neither of these are possible, CTD casts with high quality water samples can be done near the glider and be used to evaluate and possibly correct the instrument concentrations. A priori knowledge of local concentrations can also be used to calibrate albeit at the cost of not being able to detect real deviations from the a priori knowledge. GEOMAR experiences suggest that the calibration coefficients (for a linear correction) are relatively stable between subsequent deployments.</p>
-<p><em>Table 1: Some specifications for the different instruments.</em>
-Please note that it is not known how exactly the manufacturer’s values are determined and whether the same terminology is used.
+<p><em>Table 1: Some specifications for the different instruments.</em></p>
+<p>Please note that it is not known how exactly the manufacturer’s values are determined and whether the same terminology is used.
 Typically they are valid for recently manufactured and calibrated instruments.
 Bio-fouling and other influences are not included.</p>
 <table class="colwidths-auto table">
@@ -525,6 +525,45 @@ Bio-fouling and other influences are not included.</p>
 <p>(3) It is unclear whether the OPUS’ accuracy and precision values given by the manufacturer use internal averaging of several spectra. The typical noise on CTDs was determined using single non-averaged spectra.</p>
 <p>(4) The ‘noise’ values have been estimated by calculating the standard deviation of instrument nitrate concentrations at depths with apparently homogeneous nitrate concentrations.</p>
 <p>(5) Deep SUNA and OPUS instruments have been used attached to a CTD and high accuracy nitrate concentrations have been compared to Deep SUNA and OPUS values at the time of bottle closing. The given values are the rms difference between the bottle and instrument values after the instrument values have been linearly corrected to match the bottle values</p>
+<p><em>Table 2: Instrument and glider pairs that have successfully been used.</em></p>
+<table class="colwidths-auto table">
+<thead>
+<tr class="row-odd"><th class="head"><p>Sensor / Glider</p></th>
+<th class="head"><p>Slocum</p></th>
+<th class="head"><p>Autosub/ALR (NOC)</p></th>
+<th class="head"><p>Seaglider</p></th>
+<th class="head"><p>Deepglider</p></th>
+<th class="head"><p>SeaExplorer</p></th>
+<th class="head"><p>Spray</p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="row-even"><td><p>Deep SUNA</p></td>
+<td><p>X</p></td>
+<td><p>—</p></td>
+<td><p>—</p></td>
+<td><p>—</p></td>
+<td><p>X</p></td>
+<td><p>—</p></td>
+</tr>
+<tr class="row-odd"><td><p>OPUS</p></td>
+<td><p>—</p></td>
+<td><p>—</p></td>
+<td><p>—</p></td>
+<td><p>—</p></td>
+<td><p>—</p></td>
+<td><p>—</p></td>
+</tr>
+<tr class="row-even"><td><p>LoC</p></td>
+<td><p>Integration performed by no successful deployment to date</p></td>
+<td><p>Yes, via the Autonuts project</p></td>
+<td><p>X</p></td>
+<td><p>—</p></td>
+<td><p>Integration currently being performed</p></td>
+<td><p>—</p></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div class="section" id="sensor-integration-with-gliders">
