deploy: cdfc07fe8f155431d65391dc57732bad35e81c97

--- a/sections/nitrate_introduction.html
+++ b/sections/nitrate_introduction.html
@@ -314,7 +314,7 @@ Other comparable instruments have been developed by various companies and instit
 <p>All these instruments determine the attenuation (absorption, reflection and scattering) of ultraviolet (UV) light in seawater, which for the range of wavelengths from about 200 to 250 nm is strongly influenced by the concentration of nitrogen in the water.
 In oxic seawater nearly all dissolved nitrogen is found in the form of Nitrate so that the measurements usually allow an estimation of the concentration of dissolved Nitrate.
 In places with low oxygen concentrations this assumption might be violated and UV light might be absorbed by other nitrogen containing species such as e.g. Nitrite.</p>
-<p>In the UV wavelength range in question attenuation takes place not only by Nitrate but also by the absorption by Bromide (one of the essential ions of seawater), Bisulfide (H2S), humic acid and Nitrite (NO2) as well as by the scattering by particles in the seawater (Johnson and Coletti, 2002).
+<p>In the UV wavelength range in question attenuation takes place not only by Nitrate but also by the absorption by Bromide (one of the essential ions of seawater), Bisulfide (H2S), humic acid and Nitrite (NO<sub>2</sub>) as well as by the scattering by particles in the seawater (Johnson and Coletti, 2002).
 Temperature and pressure additionally influence the attenuation (Sakamoto  et al., 2009; Sakamoto et al., 2017).</p>
 <p>The attenuation processes have different spectral characteristics in the UV wavelength range allowing their effects to be distinguished to some degree.
 This enables UV spectrometers to determine the concentrations of multiple chemical species at the same time.
