deploy: 5575608313dc523f87ec4709f100cfec7d19145e

--- a/images/permissions.html
+++ b/images/permissions.html
@@ -287,6 +287,7 @@ commentsRunWhenDOMLoaded(addUtterances);
 <li><p><code class="docutils literal notranslate"><span class="pre">logo.png</span></code>- OceanGliders</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">logo_v02_1_contour.png</span></code> - OceanGliders</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">logo-ocean-gliders.png</span></code> - OceanGliders</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">slocum_g2_with_suna.jpg</span></code> - Gerd Krahmann</p></li>
 </ul>
 </div>
 
