--- a/images/permissions.html
+++ b/images/permissions.html
@@ -287,7 +287,9 @@ commentsRunWhenDOMLoaded(addUtterances);
 <li><p><code class="docutils literal notranslate"><span class="pre">logo.png</span></code>- OceanGliders</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">logo_v02_1_contour.png</span></code> - OceanGliders</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">logo-ocean-gliders.png</span></code> - OceanGliders</p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">SeaExplorer_with_suna_mr_arrow.jpg</span></code> - Daisuke Hasegawa</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">slocum_g2_with_suna.jpg</span></code> - Gerd Krahmann</p></li>
+<li></li>
 </ul>
 </div>
 
