--- a/sections/nitrate_pre_deployment.html
+++ b/sections/nitrate_pre_deployment.html
@@ -653,9 +653,15 @@ This typically includes the collection of various Metadata for all sensors prese
     <footer class="footer">
   <p>
     
-      By The Jupyter Book community<br/>
-    
-        &copy; Copyright 2021.<br/>
+        &copy; Copyright .<br/>
+      <div class="extra_footer">
+        <p>  By the OceanGliders community using
+  <a href="https://jupyterbook.org/intro.html"   target="_blank">Jupyter Book</a>. 
+  This work is licensed under a 
+  <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"> Creative Commons Attribution 4.0 Generic License.</a> 
+</p>
+
+      </div>
   </p>
 </footer>
 </main>
